@@ -1,3 +1,9 @@
+TAG: gbseqload-6-0-13-1
+DATE: 01/31/2019
+STAFF: lec
+CHANGES:
+TR13026/remove obsolete reports from index page
+
 TAG: gbseqload-6-0-12-1
 DATE: 03/07/2018
 STAFF: sc
